# agenthub

./: beeai-agent-creator-sdk-guide.md  beeai-http-exposure-analysis.md  simple_agent_execution.py
agent-hiring-mvp/: .gitignore  QUICK_START.md  (+16 more)
agent-hiring-mvp/agenthub-sdk/: CLI_COMPLETE_SUMMARY.md  CLI_GUIDE.md  CLI_SUMMARY.md  CONSUMPTION_CLI_GUIDE.md  README.md  __init__.py  agent.py  agent_config_schema.json  cli.py  client.py  config_validator.py  pyproject.toml  requirements.txt  setup_cli.py
agent-hiring-mvp/agenthub-sdk/examples/: cli_example.py
agent-hiring-mvp/agenthub-sdk/templates/academic_research/: README.md  academic_research.py  config.json  requirements.txt
agent-hiring-mvp/agenthub-sdk/templates/academic_research_grounded/: README.md  academic_research.py  config.json
agent-hiring-mvp/agenthub-sdk/templates/acl_review_agent/: ARRform.txt  ARRguidelines.txt  README.md  acl_review_agent.py  config.json  consts.py  install_dependencies.py  prompts.py  requirements.txt  test_acl_review.py
agent-hiring-mvp/agenthub-sdk/templates/acp_agent/: QUICKSTART.md  README.md  acp_client_test.py  config.json  example_usage.py  requirements.txt
agent-hiring-mvp/agenthub-sdk/templates/acp_agent_template/: TEMPLATE_INFO.md  acp_agent_template.py  config.json  example_usage.py  requirements.txt  test_template.py
agent-hiring-mvp/agenthub-sdk/templates/acp_rag/: README.md  acp_client_test.py  agent.py  config.json  requirements.txt
agent-hiring-mvp/agenthub-sdk/templates/book_writing_langgraph/: book_writing_agent.py  config.json  requirements.txt
agent-hiring-mvp/agenthub-sdk/templates/deep_research/: .gitignore  README.md  agent_code.py  config.json  deep_research.py
agent-hiring-mvp/agenthub-sdk/templates/deep_research_agent/: README.md  config.json  configuration.py  deep_research_agent.py  prompts.py  requirements.txt  state.py  utils.py
agent-hiring-mvp/agenthub-sdk/templates/deep_research_simple/: config.json  deep_research.py  requirements.txt
(+264 files in other folders)
