[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenthub-sdk"
version = "1.0.0"
description = "A comprehensive SDK for creating, publishing, and using AI agents on the AgentHub platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AgentHub Team", email = "support@agenthub.com"},
]
keywords = ["ai", "agents", "sdk", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
agenthub = "agenthub_sdk.cli:cli"

[project.urls]
Homepage = "https://github.com/your-org/agenthub"
Documentation = "https://github.com/your-org/agenthub/blob/main/agent-hiring-mvp/agenthub-sdk/README.md"
Repository = "https://github.com/your-org/agenthub"
Issues = "https://github.com/your-org/agenthub/issues"

[tool.setuptools]
packages = ["agenthub_sdk"]

[tool.setuptools.package-dir]
"agenthub_sdk" = "."

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 